first prototype using pseudo rdf resource centric access